added webp reviews

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,8 +7,8 @@
 				<div class=" swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/girl_one@1x.png 1x, /img/reviews/girl_one@2x.png 2x"
-							src="/img/reviews/girl_one@2x.png," alt="Images Victoria Dobrzhanska" width="80"
+							srcset="/img/reviews/girl_one@1x.webp 1x, /img/reviews/girl_one@2x.webp 2x"
+							src="/img/reviews/girl_one@2x.webp" alt="Images Victoria Dobrzhanska" width="80"
 							height="80">
 						<h3 class="reviews-card-title section-subtitle">Victoria Dobrzhanska</h3>
 						<p class="reviews-card-text section-text">I love this chocolate bar. Perfect combination of
@@ -18,8 +18,8 @@
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/boy_one@1x.png 1x, /img/reviews/boy_one@2x.png 2x"
-							src="/img/reviews/boy_one@2x.png" alt="Images Nazar Babenko" width="80" height="80">
+							srcset="/img/reviews/boy_one@1x.webp 1x, /img/reviews/boy_one@2x.webp 2x"
+							src="/img/reviews/boy_one@2x.webp" alt="Images Nazar Babenko" width="80" height="80">
 						<h3 class="reviews-card-title section-subtitle">Nazar Babenko</h3>
 						<p class="reviews-card-text section-text">This chocolate confection is a delight! A delight! The
 							wafer is light and crisp, the hazelnut cream is smooth, and the chocolate is good.</p>
@@ -28,8 +28,8 @@
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/girl_two@1x.png 1x, /img/reviews/girl_two@2x.png 2x"
-							src="/img/reviews/girl_two@2x.png" alt="Images Olena Kampusch" width="80" height="80">
+							srcset="/img/reviews/girl_two@1x.webp 1x, /img/reviews/girl_two@2x.webp 2x"
+							src="/img/reviews/girl_two@2x.webp" alt="Images Olena Kampusch" width="80" height="80">
 						<h3 class="reviews-card-title section-subtitle">Olena Kampusch</h3>
 						<p class="reviews-card-text section-text"> Chocolate is a family favourite treat. Love the
 							delicious smooth chocolate and the creaminess inside. The wafer is soft but crunchy.</p>
@@ -38,8 +38,8 @@
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/girl_three@1x.png 1x, /img/reviews/girl_three@2x.png 2x"
-							src="/img/reviews/girl_three@2x.png" alt="Images Natalia Sus" width="80" height="80">
+							srcset="/img/reviews/girl_three@1x.webp 1x, /img/reviews/girl_three@2x.webp 2x"
+							src="/img/reviews/girl_three@2x.webp" alt="Images Natalia Sus" width="80" height="80">
 						<h3 class="reviews-card-title section-subtitle">Natalia Sus</h3>
 						<p class="reviews-card-text section-text"> The chocolate assortment was delicious. Both dark and
 							milk chocolate pieces were smooth and just right on the sweetness level. </p>
@@ -48,8 +48,8 @@
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/boy_two@1x.png 1x, /img/reviews/boy_two@2x.png 2x"
-							src="/img/reviews/boy_two@1x.png" alt="Images Danilo Nottingham" width="80" height="80">
+							srcset="/img/reviews/boy_two@1x.webp 1x, /img/reviews/boy_two@2x.webp 2x"
+							src="/img/reviews/boy_two@1x.webp" alt="Images Danilo Nottingham" width="80" height="80">
 						<h3 class="reviews-card-title section-subtitle">Danilo Nottingham</h3>
 						<p class="reviews-card-text section-text"> This is delicious. It so rich and flavorful you don’t
 							need to use as many. I love topping an apple with almond butter and these chips for a snack.
@@ -59,8 +59,8 @@
 				<div class="swiper-slide">
 					<div class="reviews-card">
 						<img class="reviews-card-img"
-							srcset="/img/reviews/girl_four@1x.png 1x, /img/reviews/girl_four@2x.png 2x"
-							src="/img/reviews/girl_four@2x.png" alt="Images Irina Tydnyuk" width="80" height="80">
+							srcset="/img/reviews/girl_four@1x.webp 1x, /img/reviews/girl_four@2x.webp 2x"
+							src="/img/reviews/girl_four@2x.webp" alt="Images Irina Tydnyuk" width="80" height="80">
 						<h3 class="reviews-card-title section-subtitle">Irina Tydnyuk</h3>
 						<p class="reviews-card-text section-text"> This is simply the best chocolate around, and I'm
 							just thrilled to support a local company! Best local chocolate - world class :)</p>
