--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -13,7 +13,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img src="/img/buy_now/buy@1x.png" alt="pieces of chocolate">
+              <img src="/img/buy_now/buy@1x.webp" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">100 g</button>
@@ -23,7 +23,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img src="/img/buy_now/buy_two@1x.png" alt="pieces of chocolate">
+              <img src="/img/buy_now/buy_two@1x.webp" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">200 g</button>
@@ -33,7 +33,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img src="/img/buy_now/buy_three@1x.png" alt="pieces of chocolate">
+              <img src="/img/buy_now/buy_three@1x.webp" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">300 g</button>
