picture buy now

--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -17,8 +17,8 @@
               <source
                 media="(min-width: 768px)"
                 srcset="
-                  ../img/buy_now/buy@1x.webp 1x,
-                  /img/buy_now/buy@2x.webp   2x
+                  /img/buy_now/buy@1x.webp 1x,
+                  /img/buy_now/buy@2x.webp 2x
                 "
               />
               <!-- mobile -->
