--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -9,7 +9,7 @@
     <li>
       <a
         class="mobile-menu-link mobile-menu-text mobile-menu-line link"
-        href="/index.html"
+        href="#header"
         >Home</a
       >
     </li>
